Fix relative path to static files

--- a/tile/index.html
+++ b/tile/index.html
@@ -279,7 +279,7 @@
 							<div class="ticket-info pure-g">
 								<div class="pure-u-1 pure-u-md-2-3">
 									<a class="map" href="https://www.google.com/maps/place/Gloria/@60.1638891,24.9443205,17.25z/data=!4m13!1m7!3m6!1s0x46920bc903ac768f:0xd88df6585a49e3e0!2sPieni+Roobertinkatu,+00130+Helsinki,+Finland!3b1!8m2!3d60.1641992!4d24.9460867!3m4!1s0x0:0xc0016fe0a6a17583!8m2!3d60.1639756!4d24.9451889?hl=en">
-										<img src="/img/map.png" alt="">
+										<img src="img/map.png" alt="">
 										
 									</a>
 									<strong>October 8, 2017</strong> <br>
@@ -375,10 +375,10 @@
 			<h3>Proudly brought to you by</h3>
 
 			<div class="logos">
-				<img src="/img/logo-mff.jpg" alt="">
-				<img src="/img/logo-harju.jpg" alt="">
-				<img src="/img/logo-gloria.jpg" alt="">
-				<img src="/img/logo-dragon.png" alt="">
+				<img src="img/logo-mff.jpg" alt="">
+				<img src="img/logo-harju.jpg" alt="">
+				<img src="img/logo-gloria.jpg" alt="">
+				<img src="img/logo-dragon.png" alt="">
 			</div>
 		</div>
 	</main>
