Fix relative paths

--- a/tile/index.html
+++ b/tile/index.html
@@ -46,7 +46,7 @@
 		}
 
 		body {
-			background-image: url('/img/hero.png');
+			background-image: url('img/hero.png');
 			background-attachment: fixed;
 		}
 
@@ -81,7 +81,7 @@
 				  rgba(255, 88, 0, 0.85), 
 				  rgba(255, 88, 0, 0.85)
 				),
-				url('/img/rubiks-cube-coloured.png');
+				url('img/rubiks-cube-coloured.png');
 			background-position: center;
 			background-repeat: no-repeat;
 			color: white;
@@ -95,7 +95,7 @@
 		}
 
 		main .featured.block {
-			background-image: url('/img/stage.jpg');
+			background-image: url('img/stage.jpg');
 			background-position: center;
 
 			font-size: 36px;
