--- a/tile/index.html
+++ b/tile/index.html
@@ -284,7 +284,7 @@
 									</a>
 									<strong>October 8, 2017</strong> <br>
 									Gloria Stage <br>
-									Pienirobertinkatu 12, <br>
+									Pieni Roobertinkatu 12, <br>
 									Helsinki <br>
 								</div>
 
