--- a/tile/index.html
+++ b/tile/index.html
@@ -131,6 +131,7 @@
 
 		main .faq.block {
 			background-color: #F4C430;
+			opacity: 0.9;
 			height: calc(100% - 20px);
 		}
 
@@ -158,6 +159,7 @@
 			margin-bottom: 2em;
 			padding: 1em 0;
 			width: 100%;
+			opacity: 0.9;
 		}
 
 		.fbcontainer {
