--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 	<section class="hero">
 		<div class="container">
 			<div class="present">
-				<div style="font-weight: 700; font-size: 200%;">MUSIC FOR FRIENDS</div>
+				<div style="font-weight: 700; font-size: 200%; letter-spacing: 0.1em;">MUSIC FOR FRIENDS</div>
 				<div style="font-weight: 100; font-size: 200%;">presents</div>
 			</div>
 
