--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 			</div>
 
 			<div class="punch">
-				<div style="font-weight: 700; font-size: 400%;">OCTOBER #BEAT 2017</div>
+				<div style="font-weight: 700; font-size: 400%;">OCTOBER #BEATZ 2017</div>
 				<div class="cube" style="
 				font-family: Georgia, serif;
 				font-size: 250%;
