--- a/index.html
+++ b/index.html
@@ -154,16 +154,28 @@
 	<section class="hero">
 		<div class="container">
 			<div class="present">
-				<div style="font-weight: 700; font-size: 180%; letter-spacing: 0.1em;">MUSIC FOR FRIENDS</div>
-				<div style="font-weight: 100; font-size: 180%;">presents</div>
+				<div style="
+					font-weight: 700;
+					font-size: 180%;
+					letter-spacing: 0.1em;">
+				MUSIC FOR FRIENDS</div>
+				<div style="
+					font-weight: 100;
+					font-size: 180%;">
+				presents</div>
 			</div>
 
 			<div class="punch">
-				<div style="font-weight: 700; font-size: 400%; letter-spacing: 0.05em;">OCTOBER #BEATZ 2017</div>
+				<div style="
+					font-weight: 700;
+					font-size: 400%;
+					letter-spacing: 0.05em;">
+				OCTOBER #BEATZ 2017</div>
+
 				<div class="cube" style="
-				font-family: Georgia, serif;
-				font-size: 300%;
-				letter-spacing: 0.15em;">
+					font-family: Georgia, serif;
+					font-size: 300%;
+					letter-spacing: 0.15em;">
 				<span>RUBIK'S CUBE</span></div>
 			</div>
 
