--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
 		.hero .extra .media img {
 			margin-right: 2em;
+			height: 24px;
 		}
 
 		.hero .extra .buy-ticket {
@@ -77,14 +78,14 @@
 		}
 
 		.hero .pure-button {
-			font-size: 110%;
+			/*font-size: 110%;*/
 			color: white;
 			background: none;
 			border: 4px solid white;
 			border-radius: 0;
 			font-weight: 700;
 			letter-spacing: 0.6em;
-			padding: 1em 0;
+			padding: 0.75em 0;
 			text-align: center;
 		}
 
