--- a/index.html
+++ b/index.html
@@ -66,27 +66,25 @@
 		.hero .extra .buy-ticket {
 			position: absolute;
 			bottom: 0;
-			width: 300px;
+			width: 16em;
 			left: 50%;
-			margin-left: -150px;
+			margin-left: -8em;
+
+			color: white;
+			background: none;
+			border: 4px solid white;
+			border-radius: 0;
+
+			font-weight: 700;
+			letter-spacing: 0.6em;
+			padding: 0.75em 0 0.75em 0.6em;
+			text-align: center;
 		}
 
 		.hero .extra .where-when {
 			position: absolute;
 			bottom: 0;
 			right: 0;
-		}
-
-		.hero .pure-button {
-			/*font-size: 110%;*/
-			color: white;
-			background: none;
-			border: 4px solid white;
-			border-radius: 0;
-			font-weight: 700;
-			letter-spacing: 0.6em;
-			padding: 0.75em 0;
-			text-align: center;
 		}
 
 		.punch .cube span {
