--- a/wp-login.php@action=lostpassword.html
+++ b/wp-login.php@action=lostpassword.html
@@ -9,7 +9,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<title>October #Beatz 2016 &lsaquo; Lost Password</title>
 	<link rel='dns-prefetch' href='http://s.w.org/' />
-<link rel='stylesheet' href='wp-admin/load-styles.php?c=0&amp;dir=ltr&amp;load%255B%255D=dashicons,buttons,forms,l10n,login&amp;ver=4.6.1' type='text/css' media='all' />
+<link rel='stylesheet' href='wp-admin/load-styles.php@c=0&amp;dir=ltr&amp;load%255B%255D=dashicons,buttons,forms,l10n,login&amp;ver=4.6.1.css' type='text/css' media='all' />
 <meta name='robots' content='noindex,follow' />
 	</head>
 	<body class="login login-action-lostpassword wp-core-ui  locale-en-us">
@@ -17,7 +17,7 @@
 		<h1><a href="https://wordpress.org/" title="Powered by WordPress" tabindex="-1">October #Beatz 2016</a></h1>
 	<p class="message">Please enter your username or email address. You will receive a link to create a new password via email.</p>
 
-<form name="lostpasswordform" id="lostpasswordform" action="wp-login.php?action=lostpassword" method="post">
+<form name="lostpasswordform" id="lostpasswordform" action="wp-login.php@action=lostpassword.html" method="post">
 	<p>
 		<label for="user_login" >Username or Email<br />
 		<input type="text" name="user_login" id="user_login" class="input" value="" size="20" /></label>
@@ -27,7 +27,7 @@
 </form>
 
 <p id="nav">
-<a href="wp-login.php">Log in</a>
+<a href="wp-login.php.html">Log in</a>
 </p>
 
 	<p id="backtoblog"><a href="index.html">&larr; Back to October #Beatz 2016</a></p>
