Make the menu darker

--- a/dev/index.html
+++ b/dev/index.html
@@ -122,6 +122,8 @@
 			letter-spacing: 0.6em;
 			line-height: 2em;
 			padding-top: 2em;
+
+			background-color: rgba(0, 0, 0, 0.8);
 		}
 
 		nav > div {
