--- a/dev/index.html
+++ b/dev/index.html
@@ -155,6 +155,21 @@
 			height: 50px;
 			vertical-align: middle;
 		}
+
+		#about {
+			padding-top: 2em;
+			padding-bottom: 2em;
+		}
+
+		#faq h3 {
+			margin-bottom: 1em;
+		}
+
+		#faq h4 {
+			text-align: center;
+			font-size: 120%;
+			text-decoration: underline;
+		}
 	</style>
 </head>
 <body>
@@ -214,11 +229,69 @@
 		</div>
 	</section>
 
+	<section id="about" class="container">
+		<h2>October #Beatz</h2>
+
+		<h4>An Annual concert of MFF</h4>
+		<p>The first #Beatz in 2014 was held with the purpose of creating a memorable milestones in 2-year development of Music For Friends. It represented the enthusiasm and hard works of all team members throughout the year. </p>
+
+		<p>#Beatz14 has received tons of love and encouragement from audience; therefore, we decided to turn it into an annual concert where people could freely showcase their talent, follow passion and develop professional skills. </p>
+
+		<p>“I was amazed by how creative the show was. While I fell in love with romantic part in the beginning, I was thrilled by the later part, when everyone stood up, danced and screamed with excitement, especially with the dance performance and the rock band in the end. Everyone was on fire!!!” - Thai Nguyen, an audience of October #Beatz15</p>
+
+		<img src="img/Story_NewDawn.png" alt="" class="img-fluid">
+	</section>
+	<hr>
 	<section id="buy-ticket" class="container">
 		<!-- Ticket Tailor Widget. Paste this in to your website where you want the widget to appear. Do no change the code or the widget may not work properly. -->
 		<div class="tt-widget"><div class="tt-widget-fallback"><p><a href="https://www.tickettailor.com/new-order/112715/8757/ref/website_widget/" target="_blank">Click here to buy tickets</a><br /><small><a href="http://www.tickettailor.com?rf=wdg" class="tt-widget-powered">Sell tickets online with Ticket Tailor</a></small></p></div><script src="https://dc161a0a89fedd6639c9-03787a0970cd749432e2a6d3b34c55df.ssl.cf3.rackcdn.com/tt-widget.js" data-url="https://www.tickettailor.com/new-order/112715/8757/ref/website_widget/" data-type="inline" data-inline-minimal="true" data-inline-show-logo="false" data-inline-bg-fill="false"></script></div>
 		<!-- End of Ticket Tailor Widget -->
 	</section>
+
+	<hr>
+
+	<section id="faq" class="container">
+		<h3>Frequently Asked Questions</h3>
+
+		<h4>Purchasing tickets</h4>
+
+		<strong>1. How can I order?</strong>
+		<p>You can order ticket directly from the website’s front page. Or you may order it on Holvi through the link: ……….</p>
+		 
+		<strong>2. How can I pay?</strong>
+		<p>After ordering your tickets, you will see the payment method in the purchasing section of ordering tickets. Please notice that you may be charged an extra 10% if the tickets are ordered on Holvi.</p>
+		 
+		<strong>3. How can I get the ticket(s)?</strong>
+		<p>After the ticket payment is confirmed, you will get the e-ticket(s) through your email. If there are any missing tickets, please kindly contact MFF to make sure you get the ticket(s) you have purchased.</p>
+		 
+		<h4>Location and time</h4>
+		
+		<strong>1. When is the concert?</strong>
+		<p>The concert will be set at 17:00 on Saturday, October 7th, 2017.</p>
+		 
+		<strong>2. Where is it?</strong>
+		<p>Oct #Beatz 2017 will be held at Gloria Stages, Pieni Roobertinkatu 12, 00120 Helsinki</p>		 
+		
+		<strong>3. Can I come late?</strong>
+		<p>Hope that you can catch up in time to enjoy the full show. Remember, we will have a lucky draw for the audience, so please don't miss it.</p>
+		 
+		<h4>Transportation</h4>
+		<strong>1. How can I get there?</strong>
+		<p>There are many ways to get there.</p>
+
+		<p>By public transportation: it takes around 5 mins from Lasipalatsi tram stop (which is 3-min walk from Rautatieasema –Central Station)  for tram 10 which will pass the Kolmikulma tram stop. Then you can take 1 min walk to Gloria Stage within 150m.</p>
+		
+		<p>By walking: It is about 900m from Rautatieasema – Central Station to Gloria Stage so it will be a 12-min walk.</p>
+		 
+		<strong>2. Can I park my car?</strong>
+		<p>Yes, there are a lot of parking places on the street where Gloria Stage is located. But please remember to get your parking place early, because there is free parking on Saturday in Helsinki. Don’t come late as it may take you more time to find a parking place from far away.</p>
+		 
+		<p>Please don’t hesitate to contact us via <a href="https://www.facebook.com/events/1879236448992828/">Facebook</a> and/or email: <a href="mailto:contact@octoberbeatz.com">contact@octoberbeatz.com</a></p>
+	</section>
+
+	<footer>
+		lol
+	</footer>
 
 	<script src="lib/jquery-3.2.1.min.js"></script>
 	<script>
