Add a barebone footer

--- a/dev/index.html
+++ b/dev/index.html
@@ -170,6 +170,13 @@
 			font-size: 120%;
 			text-decoration: underline;
 		}
+
+		footer {
+			background-color: #333;
+			color: white;
+			padding-top: 2em;
+			padding-bottom: 2em;
+		}
 	</style>
 </head>
 <body>
@@ -289,8 +296,8 @@
 		<p>Please don’t hesitate to contact us via <a href="https://www.facebook.com/events/1879236448992828/">Facebook</a> and/or email: <a href="mailto:contact@octoberbeatz.com">contact@octoberbeatz.com</a></p>
 	</section>
 
-	<footer>
-		lol
+	<footer class="container">
+		© 2017 Music For Friends Helsinki.
 	</footer>
 
 	<script src="lib/jquery-3.2.1.min.js"></script>
