Add the media links

--- a/dev/index.html
+++ b/dev/index.html
@@ -228,9 +228,9 @@
 				<a href="#buy-ticket" class="buy-ticket btn btn-block">BUY TICKETS</a>
 
 				<div class="media">
-					<a href=""><img src="img/facebook.png" alt=""></a>
-					<a href=""><img src="img/youtube.png" alt=""></a>
-					<a href=""><img src="img/insta.png" alt=""></a>
+					<a href="https://www.facebook.com/events/1879236448992828/"><img src="img/facebook.png" alt=""></a>
+					<a href="https://www.youtube.com/channel/UCGALj-UalcNK0Tp84eYTC5g"><img src="img/youtube.png" alt=""></a>
+					<a href="https://www.instagram.com/mffhelsinki/"><img src="img/insta.png" alt=""></a>
 				</div>
 			</div>
 		</div>
