--- a/dev/index.html
+++ b/dev/index.html
@@ -11,7 +11,14 @@
  -->
  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 
+
 	<style>
+
+		@font-face {
+		    font-family: "Blockletter";
+		    src: url(lib/Blockletter.woff);
+		}
+
 		html {
 			font-family: 'Lato', sans-serif;
 		}
@@ -29,7 +36,7 @@
 			background-size: cover;
 			background-repeat: no-repeat;
 			background-position: center;
-			/*height: 100vh;*/
+			height: 100vh;
 			color: white;
 			box-sizing: border-box;
 			padding-top: 2em;
@@ -44,38 +51,63 @@
 
 		.hero .present {
 			text-align: center;
-			margin-top: 2em;
-			font-size: 150%; 
-			margin-bottom: 1em;
+			margin-top: 3em;
+			font-size: 100%; 
+			margin-bottom: 1em;			
 		}
 
 /*		.hero .present {}
 */
 		.hero .punch {
+			font-family: "Blockletter", "Lato";
 			text-align: center;
 			/*margin-bottom: 2em;*/
-			font-size: 180%;
+			font-size: 120%;
 		}
 
+
+		.hero .extra {
+			font-size: 0.8em;
+			/*line-height: 1.4em;*/
+		}
 
 		.hero .extra > * {
 			margin-bottom: 1em;
 		}
 
-		.hero .extra .media {
+		footer {
+			text-align: center;
+		}
+
+		footer .media {
+			width: 80%;
+			margin-left: auto;
+			margin-right: auto;
 			display: flex;
 			justify-content: space-around;
 		}
 
-		.hero .extra .media img {
-			margin-right: 2em;
-			height: 2em;
+		footer .media img {
+			/*margin-right: 2em;*/
+			height: 1.5em;
 		}
 
-		.hero .extra .buy-ticket {
+		nav .buy-ticket.btn {
+			font-size: 0.8em;
+			/*color: #aaa;*/
+			border-width: 2px;
+			margin-left: 0;
+			margin-right: 0;
+			float: right;
+		}
+
+		.buy-ticket.btn {
 			/*position: absolute;*/
 			bottom: 0;
-			/*width: 16em;*/
+			width: 50%;
+			font-size: 1em;
+			margin-left: auto;
+			margin-right: auto;
 			/*left: 50%;*/
 			/*margin-left: -8em;*/
 
@@ -92,6 +124,7 @@
 
 		.hero .extra .where-when {
 			font-size: 120%;
+			margin-bottom: 0.8em;
 			text-align: center;
 /*			position: absolute;
 			bottom: 0;
@@ -112,6 +145,7 @@
 		.punch .cube span:after {
 			content: '';
 			position: absolute;
+		
 			width: 1.5em;
 			border-bottom: 3px solid white;
 		}
@@ -132,6 +166,10 @@
 		nav {
 			background-color: rgba(0, 0, 0, 0.7);
 			color: white;
+		}
+
+		.navbar-toggler-icon {
+			font-size: 0.8em;
 		}
 
 		.navbar-dark .navbar-nav .nav-link {
@@ -180,19 +218,23 @@
 
 		#faq h3 {
 			margin-bottom: 1em;
+			font-size: 220%;
+			text-align: center;
 		}
 
 		#faq h4 {
 			text-align: center;
-			font-size: 120%;
-			text-decoration: underline;
+			font-size: 150%;
+			margin-bottom: 0.7em;
+			margin-top: 1.5em;
+			/*text-decoration: underline;*/
 		}
 
 		footer {
 			background-color: #333;
 			color: white;
-			padding-top: 2em;
-			padding-bottom: 2em;
+			padding-top: 1em;
+			padding-bottom: 1em;
 		}
 
 		@media (min-width: 768px) {
@@ -217,24 +259,25 @@
 <body>
 	<nav class="navbar navbar-expand-lg fixed-top navbar-dark">
 		<div class="container">
-			
-			<a href="" class="navbar-brand"><img src="img/cube.png" alt="" class="logo"></a>
+			<!-- 
+			<a href="" class="navbar-brand"><img src="img/cube.png" alt="" class="logo"></a> -->
 
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
 			   <span class="navbar-toggler-icon"></span>
 			 </button>
 
+			<a href="#buy-ticket" class="buy-ticket btn btn-block">BUY TICKETS</a>
+
 			<div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo01">
 				<ul class="navbar-nav">
 					<li class="nav-item">
-						<a href="#story" class="nav-link">STORY</a>
+						<a href="/dev" class="nav-link">HOME</a>
 					</li>
 					<li class="nav-item">
-						<a href="" class="nav-link">SMOKEBOMB</a>
+						<a href="#story" class="nav-link">STORY</a>
 					</li>
-
-					<li><a href="" class="nav-link">GALLERY</a></li>
-					<li><a href="" class="nav-link">CONTACT</a></li>
+					<li><a href="#buy-ticket" class="nav-link">TICKET</a></li>
+					<li><a href="#faq" class="nav-link">FAQ</a></li>
 				</ul>
 			</div>
 		</div>
@@ -257,12 +300,9 @@
 				OCTOBER #BEATZ 2017</div>
 
 				<div class="cube" style="
-					font-family: Georgia, serif;
 					letter-spacing: 0.15em;">
 				<span>RUBIK'S CUBE</span></div>
 			</div>
-
-			<hr>
 
 			<div class="extra">
 				<div class="where-when">
@@ -273,18 +313,13 @@
 				
 				<a href="#buy-ticket" class="buy-ticket btn btn-block">BUY TICKETS</a>
 
-				<div class="media">
-					<a href="https://www.facebook.com/events/1879236448992828/"><img src="img/facebook.png" alt=""></a>
-					<a href="https://www.youtube.com/channel/UCGALj-UalcNK0Tp84eYTC5g"><img src="img/youtube.png" alt=""></a>
-					<a href="https://www.instagram.com/mffhelsinki/"><img src="img/insta.png" alt=""></a>
-				</div>
 			</div>
 		</div>
 	</section>
 
 	<section id="story" class="container">
 		<div class="row">
-			<div class="col-md-8">
+			<div class="col-md-7">
 				
 				<h4>An Annual concert of MFF</h4>
 				<p>The first #Beatz in 2014 was held with the purpose of creating a memorable milestones in 2-year development of Music For Friends. It represented the enthusiasm and hard works of all team members throughout the year. </p>
@@ -294,12 +329,12 @@
 				<p>“I was amazed by how creative the show was. While I fell in love with romantic part in the beginning, I was thrilled by the later part, when everyone stood up, danced and screamed with excitement, especially with the dance performance and the rock band in the end. Everyone was on fire!!!” - Thai Nguyen, an audience of October #Beatz15</p>
 			</div>
 
-			<div class="col-md-4">
-				<img src="img/Story_NewDawn.png" alt="" class="img-fluid">
+			<div class="col-md-5">
+				<a data-flickr-embed="true" data-context="true"  href="https://www.flickr.com/photos/131846819@N05/22090701464/in/album-72157660651011776/" title="October #Beatz 2015"><img src="https://farm6.staticflickr.com/5708/22090701464_b5c8f290d4_h.jpg" width="100%" alt="October #Beatz 2015"></a>
 			</div>
 		</div>
 	</section>
-	<hr>
+
 	<section id="buy-ticket" class="container">
 		<!-- Ticket Tailor Widget. Paste this in to your website where you want the widget to appear. Do no change the code or the widget may not work properly. -->
 		<div class="tt-widget"><div class="tt-widget-fallback"><p><a href="https://www.tickettailor.com/new-order/112715/8757/ref/website_widget/" target="_blank">Click here to buy tickets</a><br /><small><a href="http://www.tickettailor.com?rf=wdg" class="tt-widget-powered">Sell tickets online with Ticket Tailor</a></small></p></div><script src="https://dc161a0a89fedd6639c9-03787a0970cd749432e2a6d3b34c55df.ssl.cf3.rackcdn.com/tt-widget.js" data-url="https://www.tickettailor.com/new-order/112715/8757/ref/website_widget/" data-type="inline" data-inline-minimal="true" data-inline-show-logo="false" data-inline-bg-fill="false"></script></div>
@@ -309,7 +344,7 @@
 	<hr>
 
 	<section id="faq" class="container">
-		<h3>Frequently Asked Questions</h3>
+		<h3>FAQ</h3>
 
 		<h4>Purchasing tickets</h4>
 
@@ -344,12 +379,16 @@
 		<strong>2. Can I park my car?</strong>
 		<p>Yes, there are a lot of parking places on the street where Gloria Stage is located. But please remember to get your parking place early, because there is free parking on Saturday in Helsinki. Don’t come late as it may take you more time to find a parking place from far away.</p>
 		 
-		<p>Please don’t hesitate to contact us via <a href="https://www.facebook.com/events/1879236448992828/">Facebook</a> and/or email: <a href="mailto:contact@octoberbeatz.com">contact@octoberbeatz.com</a></p>
 	</section>
 
 	<footer>
 		<div class="container">
-			© 2017 Music For Friends Helsinki.
+			<!-- <p><a href="mailto:contact@octoberbeatz.com">contact@octoberbeatz.com</a></p> -->
+			<div class="media">
+				<a href="https://www.facebook.com/events/1879236448992828/"><img src="img/facebook.png" alt=""></a>
+				<a href="https://www.youtube.com/channel/UCGALj-UalcNK0Tp84eYTC5g"><img src="img/youtube.png" alt=""></a>
+				<a href="https://www.instagram.com/mffhelsinki/"><img src="img/insta.png" alt=""></a>
+			</div>
 		</div>
 	</footer>
 
@@ -395,5 +434,8 @@
 		    }
 		  });
 	</script>
+
+
+	<script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
 </body>
 </html>
