Add the sponsor logos

--- a/dev/index.html
+++ b/dev/index.html
@@ -303,14 +303,25 @@
 		    top: -100px;
 		    visibility: hidden;
 		}
+
+		.sponsors {
+			text-align: center;
+			margin-top: 2em;
+			margin-bottom: 2em;
+		}
+
+		.sponsors a {
+			display: inline-block;
+			margin-right: 1em;
+		}
 	</style>
 </head>
 
 <body id="content">
 	<nav class="navbar navbar-expand-lg fixed-top navbar-dark">
 		<div class="container">
-			<!-- 
-			<a href="" class="navbar-brand"><img src="img/cube.png" alt="" class="logo"></a> -->
+			
+			<!-- <a href="" class="navbar-brand"><img src="img/cube.png" alt="" class="logo"></a> -->
 
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
 			   <span class="navbar-toggler-icon"></span>
@@ -478,6 +489,20 @@
 		<strong>2. Can I park my car?</strong>
 		<p>Yes, there are a lot of parking places on the street where Gloria Stage is located. But please remember to get your parking place early, because there is free parking on Saturday in Helsinki. Don’t come late as it may take you more time to find a parking place from far away.</p>
 		 
+	</section>
+
+	<hr>
+
+	<section class="sponsors container">
+		<p>
+			<strong>This show is partnered with the following organizations.</strong>
+		</p>
+
+		<div>
+			<a href="https://www.facebook.com/musicforfriendshelsinki"><img src="img/logo-mff.jpg" alt=""></a>
+			<a href="http://harju.munstadi.fi/"><img src="img/logo-harju.jpg" alt=""></a>
+			<a href="http://gloria.munstadi.fi"><img src="img/logo-gloria.jpg" alt=""></a>
+		</div>
 	</section>
 
 	<footer>
