--- a/dev/index.html
+++ b/dev/index.html
@@ -360,7 +360,7 @@
 
 				<div class="cube" style="
 					letter-spacing: 0.15em;">
-				<span>RUBIK'S CUBE</span></div>
+				<span>RUBIK</span></div>
 			</div>
 
 			<div class="extra">
