Revert "Nicer flickr album embed service"
This reverts commit 32d5389c5344aebeed37d4460df774e558f0dc76.

--- a/dev/index.html
+++ b/dev/index.html
@@ -389,7 +389,7 @@
 			</div>
 
 			<div class="col-md-5">
-				<div id="flickrembed"></div><div style="position:absolute; top:-70px; display:block; text-align:center; z-index:-1;"><script src='https://flickrembed.com/embed_v2.js.php?source=flickr&layout=responsive&input=www.flickr.com/photos/131846819@N05/albums/72157660651011776&sort=0&by=album&theme=default&scale=fill&limit=10&skin=default&autoplay=true'></script>
+				<a data-flickr-embed="true" data-context="true"  href="https://www.flickr.com/photos/131846819@N05/22090701464/in/album-72157660651011776/" title="October #Beatz 2015"><img src="https://farm6.staticflickr.com/5708/22090701464_b5c8f290d4_h.jpg" width="100%" alt="October #Beatz 2015"></a>
 			</div>
 		</div>
 	</section>
