Fuck flickr embedding, too many issues

--- a/dev/index.html
+++ b/dev/index.html
@@ -389,7 +389,7 @@
 			</div>
 
 			<div class="col-md-5">
-				<a data-flickr-embed="true" data-context="true"  href="https://www.flickr.com/photos/131846819@N05/22090701464/in/album-72157660651011776/" title="October #Beatz 2015"><img src="https://farm6.staticflickr.com/5708/22090701464_b5c8f290d4_h.jpg" width="100%" alt="October #Beatz 2015"></a>
+				<img src="img/Story_NewDawn_-min.png" alt="">
 			</div>
 		</div>
 	</section>
@@ -561,6 +561,7 @@
 
 
 	<script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+
 
 	<script id="__bs_script__">//<![CDATA[
 	    document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.18.13'><\/script>".replace("HOST", location.hostname));
