Use Lato throughout

--- a/dev/index.html
+++ b/dev/index.html
@@ -25,7 +25,7 @@
 		    src: url(lib/Blockletter.woff);
 		}
 
-		html {
+		html, h1, h2, h3, h4, h5, h6, p, div {
 			font-family: 'Lato', sans-serif;
 		}
 
