Fix the font in the hero section

--- a/dev/index.html
+++ b/dev/index.html
@@ -65,10 +65,14 @@
 /*		.hero .present {}
 */
 		.hero .punch {
-			font-family: "Blockletter", "Lato";
 			text-align: center;
 			/*margin-bottom: 2em;*/
 			font-size: 120%;
+		}
+
+		.hero .punch .beatz,
+		.hero .punch .cube {
+			font-family: "Blockletter", "Lato";
 		}
 
 
