Close the navbar on click on mobile

--- a/dev/index.html
+++ b/dev/index.html
@@ -561,6 +561,10 @@
 		      }
 		    }
 		  });
+
+		$('.navbar-nav>li>a').on('click', function(){
+		    $('.navbar-collapse').collapse('hide');
+		});
 	</script>
 
 	<script>
