--- a/dev/index.html
+++ b/dev/index.html
@@ -393,7 +393,7 @@
 			</div>
 
 			<div class="col-md-5">
-				<img src="img/Story_NewDawn_-min.png" alt="">
+				<img src="img/Story_NewDawn_-min.png" alt="" class="img-fluid">
 			</div>
 		</div>
 	</section>
