--- a/dev/index.html
+++ b/dev/index.html
@@ -6,7 +6,7 @@
 
 	<title>October #Beatz Rubik</title>
 	<meta property="og:title" content="October #Beatz Rubik">
-	<meta property="og:description" content="October #Beatz is an annual concert of MFF. The first #Beatz in 2014 was held with the purpose of creating a memorable milestones in 2-year development of Music For Friends. It represented the enthusiasm and hard works of all team members throughout the year." >
+	<meta property="og:description" content="October #Beatz is an annual concert of MFF. The first #Beatz in 2014 was held with the purpose of creating a memorable milestone in the 2 years' development of Music For Friends Helsinki. It represents the enthusiasm and hard work of all team members throughout the year." >
 	<meta property="og:url" content="http://octoberbeatz.com/">
 	<meta property="og:image" content="http://octoberbeatz.com/dev/img/exploding-cube.jpg" >
 
@@ -59,7 +59,7 @@
 			text-align: center;
 			margin-top: 3em;
 			font-size: 100%; 
-			margin-bottom: 1em;			
+			margin-bottom: 1em;
 		}
 
 /*		.hero .present {}
